fix(style): remove block-dimension overflow of event members
I don't understand why the overflow occurred in the first place, and why
the fix works, uh, but it seems to work.

--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ hr {
 }
 
 .event-members {
+	display: flex;
 	padding: 0 var(--margin-unit);
 	height: 60px;
 	overflow-x: scroll;
@@ -416,7 +417,6 @@ hr {
 }
 
 .event-member {
-	display: inline-block;
 	margin-left: var(--margin-unit);
 }
 
